# py-oneline

./: .dockerignore  .pre-commit-config.yaml  README.md  dockerfile  justfile  pyproject.toml
src/disearch/: __main__.py  cli.py
src/disearch/tui/: __init__.py  app.py  raw_app.py  screens.py
src/research/: __main__.py
src/runtime/: __main__.py  cli.py  core.py  main.py  vm.py
src/runtime/utils/: singleton.py
tests/: test_file.py
